Implemented Cache service